--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 35vh;
+  height: 30vh;
   /* Adjust margin-top to compensate for the header changes */
   margin-top: 2vh;
 }
@@ -55,6 +55,7 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 10px;
+  margin-top: 10px;
   height: 40px;
 }
 
@@ -95,4 +96,15 @@
   width: 100vw;
   color: white;
   font-size: 24px;
+}
+
+.PlayerBusted {
+  color: #EF476F;
+  font-size: 40px;
+  font-weight: 600;
+}
+
+.GameMessage {
+  font-size: 34px;
+  font-weight: 600;
 }
